<resources>
    <string name="app_name">StarWarsJunior</string>

    <!-- Server error -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message_unknown">Internal error, contact the support</string>
    <string name="dialog_button_okay">OK</string>

    <string name="error_generic_message">Try the operation again!</string>
    <string name="error_network_error">There is no connection to the server. Check if the wi-fi is active!</string>
    <string name="error_network_server_timeout">Server timeout, try later!</string>
    <string name="error_server_internal">Internal error, contact the support!</string>
    <string name="error_invalid_url">Invalid URL</string>

    <!-- Error Messages -->
    <string name="error_generic">An error has occurred, contact the administrator.</string>
    <string name="error_internal_server">An internal server error has occurred, contact the administrator.</string>
    <string name="error_session_timed_out">Your session has expired, please start a new one.</string>

    <string name="here_you_will_find_all_the_information_you_need_about_your_favorite_characters_their_ships_and_their_planets">here you will find all the information you need about your favorite characters, their ships and their planets</string>
    <string name="may_the_force_be_with_you">may the force be with you</string>
    <string name="characters">characters</string>
    <string name="planets">planets</string>
    <string name="ships">ships</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">light mode</string>
    <string name="name">name</string>
    <string name="row_list_image">row_list_image</string>
    <string name="character_image">character image</string>
    <string name="back_button">back button</string>
    <string name="biographical_information">biographical information</string>
    <string name="homeworld">homeworld</string>
    <string name="ascending_order">ascending order</string>
    <string name="descending_order">descending order</string>
    <string name="filter_button">filter button</string>
    <string name="born">born</string>
    <string name="died">died</string>
    <string name="physical_description">physical description</string>
    <string name="species">species</string>
    <string name="gender">gender</string>
    <string name="pronouns">pronouns</string>
    <string name="height">height</string>
    <string name="mass">mass</string>
    <string name="story">story</string>
    <string name="specie_gender">specie / gender</string>
    <string name="filter_icon">filter icon</string>
    <string name="human">human</string>
    <string name="droid">droid</string>
    <string name="ewoks">ewoks</string>
    <string name="keshiri">keshiri</string>
    <string name="zeltrons">zeltrons</string>
    <string name="jawas">jawas</string>
    <string name="side_of_the_force">side of the force</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="search">search</string>
    <string name="year">year</string>
    <string name="reset_button">reset button</string>
    <string name="specie">specie</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="undefined">undefined</string>
    <string name="hair_color">hair color</string>
    <string name="skin_color">skin color</string>
    <string name="eye_color">eye color</string>
    <string name="planet">planet</string>
    <string name="length">length</string>
    <string name="diameter">diameter</string>
    <string name="ship_name">ship name</string>
    <string name="wookie">wookie</string>
    <string name="rodian">rodian</string>
    <string name="twi_lek">twi\'lek</string>
    <string name="ewok">ewok</string>
    <string name="n_a">n/a</string>
    <string name="size">size</string>
    <string name="planet_characteristics">planet characteristics</string>
    <string name="rotation_period">rotation period</string>
    <string name="orbital_period">orbital period</string>
    <string name="gravity">gravity</string>
    <string name="geography">geography</string>
    <string name="climate">climate</string>
    <string name="terrain">terrain</string>
    <string name="surface_water">surface water</string>
    <string name="demographics">demographics</string>
    <string name="population">population</string>
    <string name="description">description</string>
    <string name="model">model</string>
    <string name="starship_class">starship class</string>
    <string name="manufacturer">manufacturer</string>
    <string name="specifications">specifications</string>
    <string name="max_speed">max speed</string>
    <string name="hyperdrive_rating">hyperdrive rating</string>
    <string name="mglt">mglt</string>
    <string name="cost_in_credits">cost in credits</string>
    <string name="capacity">capacity</string>
    <string name="crew">crew</string>
    <string name="passengers">passengers</string>
    <string name="cargo_capacity">cargo capacity</string>
    <string name="consumables">consumables</string>
    <string name="ship_description">ship description</string>
    <string name="technical_specifications">technical specifications</string>
    <string name="ship_capacity">ship capacity</string>
    <string name="reset">reset</string>
    <string name="little">little</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="slow">slow</string>
    <string name="average">average</string>
    <string name="fast">fast</string>
    <string name="attention">attention</string>
    <string name="results_not_found">results not found</string>
    <string name="stormtrooper">stormtrooper</string>
    <string name="artic">artic</string>
    <string name="arid">arid</string>
    <string name="hot">hot</string>
    <string name="temperate">temperate</string>
    <string name="tropical">tropical</string>
    <string name="windy">windy</string>
    <string name="desert">desert</string>
    <string name="forest">forest</string>
    <string name="jungle">jungle</string>
    <string name="mountain">mountain</string>
    <string name="ocean">ocean</string>
    <string name="plains">plains</string>
    <string name="unknown">unknown</string>
</resources>